# es_adlershof

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  settings.py  zensical.toml
blueprints/: adlershof.yaml
config/: building_shares.yaml
custom_components/: flh_heatpump.yaml  heatpump.yaml
docs/: datenstrukturen.md  index.md  setup.md
docs/scripts/: calc_heat_waste_cop.md  calc_heat_waste_power.md  calc_waermemenge_teltowkanal.md  calc_wind_timeseries.md  get_area_per_type_of_use_projection.md  get_demand_profiles.md  get_demands_per_building.md  get_solar_thermal_profiles.md  get_total_area_and_units.md  get_waste_heat_profiles.md  prepare_technikkatalog.md  preprocess_capacity_costs.md  preprocess_hp_air_cop.md  preprocess_hp_air_cost.md
scenarios/: 2035_mean_rcp85.yaml  2050-el_eff.yaml  flatdata.yaml  legacy.yaml
scripts/: calc_heat_waste_cop.py  calc_heat_waste_power.py  calc_pv_timeseries.py  calc_waermemenge_teltowkanal.py  calc_wind_timeseries.py  get_area_per_type_of_use_projection.py  get_demand_profiles.py  get_demands_per_building.py  get_solar_thermal_collector_data.py  get_solar_thermal_profiles.py  get_total_area_and_units.py  get_waste_heat_profiles.py  prepare_technikkatalog.py  preprocess_capacity_costs.py  preprocess_cops.py  preprocess_demands.py  preprocess_heat_demand.py  preprocess_hp_air_cop.py  preprocess_hp_air_cost.py  preprocess_naming.py
scripts/deprecated/: preprocess_demands.py  preprocess_naming.py
utils/: __init__.py  economics.py  export_to_s3.py  files.py  metadata.py  technikkatalog.py
(+2 files in other folders)
